# gnarly

./: README.md  main.py  pyproject.toml  requirements-core.txt  requirements.txt
docs/research/: task-12-readme-documentation-update.md
gnarly/: __init__.py  __main__.py  cli.py  config.py
gnarly/core/: __init__.py  ca.py  io.py  utils.py
gnarly/detection/: __init__.py  base.py  efficientdet.py  face.py  yolo.py
gnarly/effects/: __init__.py  base.py  ca_effect.py  deep_dream_effect.py  morph_effect.py  pipeline.py  zoom_effect.py
gnarly/runners/: __init__.py  headless.py
tests/: test_cli_morph.py  test_detection_base.py  test_efficientdet.py  test_morph_effect.py
