[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnarly"
version = "0.1.0"
description = "Cellular automata video processing with Deep Dream and object morphing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Devin Venable"}
]
keywords = ["cellular-automata", "deep-dream", "video-processing", "generative-art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "diffusers>=0.11.0",
    "transformers>=4.21.0",
    "effdet>=0.3.0",
    "dlib>=19.24.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.16.0",
]
interactive = [
    "pygame>=2.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gnarly = "gnarly.__main__:main"

[project.urls]
Homepage = "https://github.com/devinvenable/gnarly"

[tool.setuptools.packages.find]
include = ["gnarly*"]
